--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A discord bot that does random things for my server.",
   "main": "prod/index.js",
   "scripts": {
+    "prebuild": "rm -rf ./prod",
+    "build": "tsc",
+    "lint": "eslint src",
+    "start": "node -r dotenv/config ./prod/index.js",
     "test": "echo 'No Tests Yet'"
   },
   "engines": {
@@ -32,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.23.0",
@@ -40,5 +45,10 @@
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "discord.js": "^12.5.3",
+    "dotenv": "^8.2.0",
+    "winston": "^3.3.3"
   }
 }
